# esp-windsensor-deck

./: .gitmodules  README.md
esp-arduino-nokia-display/: esp-arduino-nokia-display.ino  nmea-wind-parser.cpp  nmea-wind-parser.hpp  platformio.ini
esp-arduino-nokia-display/include/: nmea-wind-parser.hpp  pinout-esp.h  pinout-esp32.h
esp-arduino-nokia-display/src/: esp-arduino-nokia-display.cpp  nmea-wind-parser.cpp
esp32-deck-display/: CMakeLists.txt
esp32-deck-display/main/: CMakeLists.txt  Kconfig.projbuild  buttons_led.cpp  elm_display.c  elm_display.cpp  elm_display.h  elm_display.hpp  main.c  main.cpp  nmea-parser.cpp  nmea-wind-parser.cpp  nmea-wind-parser.hpp  nmea.c
esp32-deck-display/main/bitmaps/: font.txt
host-nmea-wind-parser-test/: CMakeLists.txt  main.cpp
rpi-display/: .gitignore  CMakeLists.txt  main.cpp
stm8-display-bridge/: CMakeLists.txt
stm8-display-bridge/docs/: ERM240128-2_DemoCode.c  erm240128-2.ioc8  erm240128-2.txt
stm8-display-bridge/framework-ststm8spl/: .piopm  package.json
stm8-display-bridge/framework-ststm8spl/Project/STM8S_StdPeriph_Examples/ADC2/ADC2_ContinuousConversion/: pins.h
stm8-display-bridge/src/: ERM240128-2_DemoCode.c  main.c  pins.h  stm8s_it.c  stm8s_it.h
stm8-display-bridge/src/lib/: stm8s_clk.c  stm8s_gpio.c  stm8s_tim1.c  stm8s_uart1.c
